完成服务列表详细查询接口
